--- a/styles/main.scss
+++ b/styles/main.scss
@@ -17,7 +17,7 @@ body {
             flex-flow: column nowrap;
           }
 
-        .main {
+        .main-content {
             display: $display;
         }
 
