--- a/styles/_mix.scss
+++ b/styles/_mix.scss
@@ -1,8 +1,20 @@
 
 .link-white {
-
+    &:hover {
+        color: $white;
+    }
 }
 
 .link-blue {
+    &:hover {
+        color: $link_blue;
+    }
+}
 
+.font-base {
+    font-size: 10px;
+}
+
+.font-bold {
+    font-weight: bold;
 }
