--- a/styles/_colors.scss
+++ b/styles/_colors.scss
@@ -1,8 +1,10 @@
 $border_color: #ebebeb;
+$border_focused: #cecece;
 $grey: #757575;
 $l_grey: #c2b69c;
 $d_grey: #222222;
-$base_font: #333333;
+$font_base: #333333;
 $white: #ffffff;
 $red: #ff231e;
 $l_blue: #eef7ff;
+$link_blue: #007dd2;
