--- a/styles/_size.scss
+++ b/styles/_size.scss
@@ -32,21 +32,25 @@
 
 
 .articles__item-2Xlarge {
-    @include width(1740px);
+   width: 1740px;
 }
 
 .articles__item-Xlarge {
-    @include width(1030px);
+    width: 1030px;
 }
 
 .articles__item-large {
-    @include width(650px);
+    width: 650px;
 }
 
 .articles__item-medium {
-    @include width(670px);
+    width: 670px;
 }
 
 .articles__item-small {
-    @include width(310px);
+    width: 310px;
+}
+
+.articles__item-special {
+    width: 310px;
 }
