--- a/styles/_colors.scss
+++ b/styles/_colors.scss
@@ -3,8 +3,12 @@ $border_focused: #cecece;
 $grey: #757575;
 $l_grey: #c2b69c;
 $d_grey: #222222;
-$font_base: #333333;
+$color_base: #333333;
 $white: #ffffff;
 $red: #ff231e;
-$l_blue: #eef7ff;
+$l_blue: #eef7ff; 
 $link_blue: #007dd2;
+$med_grey: #4c4c4c;
+$icon_grey: #c0bebb;
+$project_pink: #f77f84;
+$articles_backgr: #f9f9f9;
