--- a/styles/_footer.scss
+++ b/styles/_footer.scss
@@ -1,25 +1,35 @@
-@import '_variables', '_font', '_colors';
+@import '_variables', '_font', '_colors', '_mix';
 
 .footer {
     @include width();
+    box-sizing: $box_sizing;
     display: $display;
     flex-flow: column nowrap;
-    background-color: $d_grey;
+    background-color: $color_base;
     color: $l_grey;
 
     &__nav {
+        @include padding(40px 60px);
         display: $display;
+        height: 84px;
+        box-sizing: $box_sizing;
         flex-flow: row nowrap;
         justify-content: space-between;
-        box-shadow: inset 0px -1.5px 0 0 $border_color;
-        border: none;        
+        align-items: center;
+        box-shadow: inset 0px -1.5px 0 0 $med_grey;
+        border: none;
     }
 
     &__copyright {
         @include width(820px);
-        @include padding(70px 80px);
+        @include padding(70px 60px);
+        box-sizing: $box_sizing;
         display: $display;
         flex-flow: row nowrap;
+        height: 174px;
+        align-items: center;
+        justify-content: flex-start;
+        line-height: 1.5;
     }
 }
 
@@ -48,12 +58,15 @@
 .social {
     &__link {
         margin-right: 30px;
+
         &:hover {
             cursor: $cursor;
         }
     }
+
     &__icon {
         @include width(30px);
+
         &:hover {
             cursor: $cursor;
         }
