--- a/styles/_colors.scss
+++ b/styles/_colors.scss
@@ -1,7 +1,8 @@
 $border_color: #ebebeb;
+$more_border: #dedede;
 $border_focused: #cecece;
 $grey: #757575;
-$l_grey: #c2b69c;
+$l_grey: #c2b69c; //???
 $d_grey: #222222;
 $color_base: #333333;
 $white: #ffffff;
@@ -9,6 +10,12 @@ $red: #ff231e;
 $l_blue: #eef7ff; 
 $link_blue: #007dd2;
 $med_grey: #4c4c4c;
-$icon_grey: #c0bebb;
+//$icon_grey: #b9b5b2;
 $project_pink: #f77f84;
 $articles_backgr: #f9f9f9;
+$icon_grey: #e5dfd4;
+$more_blue: #ecf2f7;
+$news_blue: #99a5c2;
+$footer_grey: #999999;
+//?????
+//$social: #5b5b5b;
