--- a/styles/_mix.scss
+++ b/styles/_mix.scss
@@ -13,7 +13,9 @@
 }
 
 .font-base {
-    font-size: 10px;
+    font-size: 15px;
+    font-weight: normal;
+    //line-height: 1.5;
 }
 
 .font-bold {
@@ -21,43 +23,86 @@
 }
 
 .heading-Xlarge {
-    font-size: 36px;
+    font-size: 46px;
 }
 
 .heading-medium {
-    font-size: 24px;
+    font-size: 20px;
 }
 
 .heading-large {
     font-size: 30px;
+    //border: 1px solid green;
 }
 
-.news__block-heading {
-    text-transform: uppercase;
-    height: 32px;
+.heading-small {
+    font-size: 20px;
+    font-weight: normal;
+    //border: 1px solid green;
+}
+
+.heading-promo {
+    margin-bottom: 0px;
+    font-family: $font-bold;
 }
 
 .border {
-    box-shadow: -1.5px 0 0 0  #ebebeb;
+    box-shadow: -1.5px 0 0 0 #ebebeb;
 }
 
 .border-bottom {
     border-bottom: 1px solid $border-color;
 }
 
-.blur {
-    mask: linear-gradient(-90deg, rgba(0, 0, 0, 0) 20%, black 80%);
+.border-top {
+    border-top: 1px solid $border-color;
 }
 
 .highlighted {
     background-color: $articles_backgr;
 }
+/*
 
 .backgr-js {
     @include size(448px, 325px);
     @include bradius(8px);
     display: $display;
     padding-bottom: 12px;
-    margin-right: 28px; 
-    background-repeat: repeat-y;  
+    margin-right: 28px;
+    background-repeat: repeat-y;
+}*/
+
+.blur-js {
+    display: inline-block;
+}
+
+.cut {
+    //position: relative;
+    //display: inline-block;
+    mask: linear-gradient(-90deg, rgba(0,0,0,0) 10%, rgba(0,0,0,1) 90%);
+    -webkit-mask: linear-gradient(-90deg, rgba(0,0,0,0) 10%, rgba(0,0,0,1) 90%);
+    //mask-image: linear-gradient(-90deg, rgba(0,0,0,0) 10%, rgba(0,0,0,1) 90%);
+
+
+/*
+    &::after {
+        content: '';
+        position: absolute;
+        top: 5px;
+        left: 0px;
+        width: 50px;
+        height: 30px;
+        background: linear-gradient(to right, transparent 0%, white 50%, white 100%);
+        opacity: 0.9;
+        //border: 1px solid red;
+    }*/
+}
+
+.newslink {
+    @extend %links;
+    color: $color_base;
+    //letter-spacing: 0.5px;
+    font-family: $font-bold;
+
+   
 }
