--- a/styles/_articles.scss
+++ b/styles/_articles.scss
@@ -1,89 +1,192 @@
 @import '_variables', '_font', '_colors';
+
 .articles {
-    //section wrap
+    //wrap
     @include width();
     display: $display;
     flex-flow: row wrap;
     justify-content: flex-start;
+    box-sizing: $box_sizing;
+    @include padding(35px 0px 60px 60px);
+
+
+    &__heading {
+        //section's heading
+        @include width();
+        display: $display;
+        //height: 34.6px;
+        flex-flow: row nowrap;
+        justify-content: center;
+        font-family: $font-bold;
+    }
+
+    &__more {
+        //'read more' link
+        @include size(1160px, 50px);
+        @include bradius();
+        display: $display;
+        justify-content: center;
+        align-items: center;
+        border: 1px solid $more_border;
+        text-align: center;
+        background-color: $white;
+
+        &:hover {
+            cursor: $cursor;
+            background-color: $more_blue;
+        }
+    }
 
     &__item {
         //article's wrap
         @include bradius();
-        //@include padding(0 30px 30px 0);
+        @include padding(0 30px 30px 0);
         display: $display;
-        box-sizing: $box_sizing;
+        //box-sizing: $box_sizing;
         flex-flow: column nowrap;
-        margin-right: 28px;
-        margin-bottom: 10px;  
-        background: orange;
+        justify-content: flex-start;
+        //margin-right: 28px;
+        //margin-bottom: 10px;  
+        //background: orange; 
+        //border: 1px solid red;      
 
-        &:hover {
-            cursor: $cursor;
-        }
-
-        &__heading {
-            //section's heading
-            @include width();
-            display: $display;
-            height: 34.6px;
-            flex-flow: row nowrap;
-            justify-content: center;
-        }
-
-        &__more {
-            //'read more' link
-            @include size(100%, 50px);
-            @include bradius();
-            display: $display;
-            justify-content: center;
-            align-items: center;
-            border: 1px solid $border_color;
-            text-align: center;
-
-            &:hover {
-                cursor: $cursor;
-            }
-        }
     }
 }
 
 
 .article {
     display: $display;
+   
 
-    &:hover {
-        cursor: $cursor;
+    &__link {
+        //display: flex;
+        color: $color_base;
+
+        &:link {
+            text-decoration: none;
+
+        }
+
+        &:hover {
+            cursor: $cursor;
+            text-decoration: none;
+
+        }
+
+        &:active {
+            text-decoration: none;
+
+        }
+
+        &:visited {
+            text-decoration: none;
+
+        }
     }
 
     &__pic {
         display: $display;
         margin-bottom: 20px;
         position: relative;
-        border: 1px solid purple;
+        //border: 1px solid purple;
 
-        &:hover {
-            opacity: 0.8;
-            cursor: $cursor;
+        &::before {
+            content: "";
+            background-color: rgba(255, 255, 255, 0.1);
+            top: 0;
+            left: 0;
+            bottom: 0;
+            right: 0;
+            position: absolute;
+            opacity: 0;
+            //z-index: -1;           
+
+        }
+
+
+        &:hover::before {
+            //filter:drop-shadow(0px 0px 100px grey);
+            //filter:  brightness(120%) saturate(80%);
+            opacity: 1;
+            transition: opacity 0.3s ease;
+        }
+
+        //&:hover {
+        //   filter: brightness(120%) saturate(80%);
+        // //transition: opacity 0.2s ease-in-out;            
+        // cursor: $cursor;
+        // }
+
+        &-special01 {
+            @extend %spec;
+            background-image: url('https://womenbz.ru/static/adv_quote/promo_quote/64.jpg');
+        }
+
+        &-special02 {
+            @extend %spec;
+            background-image: url('https://womenbz.ru/images/quotes/glavnoe-vvyazatsya-v-draku.png');
+        }
+
+        &-special03 {
+            @extend %spec;
+            background-image: url('https://womenbz.ru/images/quotes/mne-ochen-hotelos-takzhe.png');
         }
     }
 
     &__projectname {
         display: $display;
         color: $project_pink;
+        font-family: $font-bold;
+        font-size: 12px;
         text-transform: uppercase;
+        letter-spacing: 0.12rem;
     }
 
     &__heading {
         @include width();
-        display: $display;
+        //display: $display;
+        font-family: $font-bold;
+        font-size: 20px;
         max-height: 52px;
+        //border: 1px solid green;
         overflow: hidden;
+        position: relative;
+        top: -15px;
     }
+
+    /*&__heading-blurred {
+        &::after {
+            content: '';
+            position: absolute;
+            //display: inline-block;
+            background: linear-gradient(to right, transparent 0%, white 50%, white 100%);
+            width: 30px;
+            height: 16px;
+            bottom: 2px;
+            right: 30px;
+            border: 1px solid orange;
+        }
+    }*/
 
     &__lead {
         @include width();
-        display: $display;
-        height: 30px;
+        //display: $display;
+        //height: 30px;
         overflow: hidden;
+        position: relative;
+        top: -30px;
     }
+
+    /*&__lead-blurred {
+        &::after {
+            content: '';
+            position: absolute;
+            display: flex;
+            background: linear-gradient(to right, transparent 0%, white 50%, white 100%);
+            width: 30px;
+            height: 11px;
+            top: 5px;
+            right: 40px;
+        }
+    }*/
 }
