--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -4,9 +4,10 @@
     @include width();
     display: $display;
     flex-flow: column nowrap;
-    justify-content: flex-start;
-    align-items: center;
+    //justify-content: flex-start;
+    //align-items: center;
     box-sizing: $box_sizing;
+    font-family: $font-norm;
 
     &__banner {
         @include width();
@@ -14,9 +15,12 @@
         height: 90px;
         background-image: url("https://womenbz.ru/static/adv_header/promo_header/60.jpg");
         background-repeat: no-repeat;
-        background-size: 150%;
+        background-size: 152%;
         background-position: center;
-        cursor: $cursor;
+        cursor: $cursor;      
+        //overflow: hidden;
+       // z-index: -1;
+      
     }
 
     &__nav {
@@ -24,45 +28,59 @@
         display: $display;
         box-sizing: $box_sizing;
         flex-flow: column nowrap;
+        //align-items: flex-start;
+        //border: 1px solid green;
     }
 }
 
 .nav-bulleted {
-    @include padding(28px 0px 30px 30px);
-    @include size(100%, 44.5px);
+   //@include padding(15px 0px 15px 10px);
+   @include size(100%, 44px);
     display: $display;
     flex-flow: row nowrap;
     align-items: center;
     justify-content: flex-start;
-    box-sizing: $box_sizing;
+    //box-sizing: $box_sizing;
     background-color: $d_grey;
     list-style: none;
     text-transform: uppercase;
     font-size: 12px;
+    position: relative;
+    top: -12px;
+  
+   // z-index: 1;
+   
 
     &__link {
         margin-right: 10px;
         color: $white;
+        font-size: 10.5px;
+        letter-spacing: 0.1rem;
+        text-decoration: none;
+        //border: 1px solid white;
     }
 
     &__link_active {
         position: relative;
+        left: -10px;
 
         &::before {
             content: "\2022";
             display: inline-block;
             position: absolute;
-            top: -5px;
-            left: 55px;
+            top: -7px;
+            left: 48px;
             color: $red;
             font-size: 20px;
+           // border: 1px solid white;
+
         }
     }
 }
 
 .nav-projects {
-    @include size(100%, 90px);
-    @include padding(36px 45px 40px 30px);
+ @include width();
+    @include padding(0 30px 28px 30px);
     display: $display;
     flex-flow: row nowrap;
     justify-content: space-between;
@@ -70,9 +88,11 @@
     box-sizing: $box_sizing;
     background-color: $white;
     border-bottom: 1px solid $border_color;
+    //border: 1px solid red;
 
     &__logo {
         @include size(285px, 38px);
+        //border: 1px solid black;
         display: $display;
         background-image: url("https://womenbz.ru/src/assets/logo-wbz.svg");
         background-size: 100%;
@@ -81,6 +101,7 @@
 
     &__links {
         @include width(200px);
+        //border: 1px solid black;
         display: $display;
         flex-flow: row nowrap;
         justify-content: space-between;
