--- a/styles/_pics.scss
+++ b/styles/_pics.scss
@@ -2,10 +2,27 @@
 
 .pic-block {
     display: $display;
+    font-family: $font-bold;
+
 
     &__img {
+        @include width();
         @include bradius();
         display: $display;
+        //position: relative;
+
+
+        /*&::after {
+            content: '';
+            position: absolute;
+            bottom: 0px;
+            left: 0px;
+            //width: 99%;
+            //height: 30%;
+            border: 1px solid orange;
+            //background: rgba(0, 0, 0, 0.15);
+            //filter: blur(10px);
+        }*/
     }
 
     &__heading {
@@ -15,16 +32,23 @@
         position: absolute;
         bottom: 70px;
         left: 20px;
+        font-family: $font-norm;
+        line-height: 1.1;
     }
+
 
     &__txt {
         display: $display;
         position: absolute;
-        bottom:15px;
-        left: 20px;        
+        bottom: 15px;
+        left: 20px;
         flex-flow: row nowrap;
         align-items: center;
         color: white;
+        //font-family: $font-bold;
+        font-weight: bold;
+        //background: linear-gradient(transparent, black);
+        //mix-blend-mode: multiply;
     }
 }
 
@@ -32,16 +56,17 @@
 
 .stat {
     display: $display;
-    color: $icon_grey;    
+    color: $icon_grey;
 
     &__icon {
         @include width(12px);
         display: $display;
-        margin-right: 10px;
+        margin-right: 5px;
     }
 
     &__txt {
         display: $display;
         font-size: 12px;
+        margin-right: 10px;
     }
 }
