--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -52,17 +52,22 @@
    
 
     &__link {
-        margin-right: 10px;
-        color: $white;
+        margin-right: 10px;        
         font-size: 10.5px;
         letter-spacing: 0.1rem;
         text-decoration: none;
-        //border: 1px solid white;
-    }
-
-    &__link_active {
         position: relative;
         left: -10px;
+       // border: 1px solid white;
+    }
+
+   
+}
+
+.link {
+    &__active {
+        color: $white;
+        @extend %links;
 
         &::before {
             content: "\2022";
@@ -77,6 +82,7 @@
         }
     }
 }
+
 
 .nav-projects {
  @include width();
@@ -149,8 +155,8 @@
 
     &__icon {
         position: absolute;
-        top: 10px;
+        top: 12px;
         right: 15px;
-        width: 14px;
+        width: 16px;
     }
 }
