--- a/styles/main.scss
+++ b/styles/main.scss
@@ -9,6 +9,7 @@ body {
         display: $display;
         flex-flow: column nowrap;
         justify-content: flex-start;
+        align-items: center;
 
 
         .content {
