--- a/mainpage/styles/_pics.scss
+++ b/mainpage/styles/_pics.scss
@@ -26,6 +26,7 @@
     }
 
     &__heading {
+        height: 200px;
         display: $display;
         flex-flow: column nowrap;
         color: $white;
@@ -33,7 +34,7 @@
         bottom: 70px;
         left: 20px;
         font-family: $font-norm;
-        line-height: 1.1;
+        line-height: 1;
     }
 
 
@@ -43,10 +44,9 @@
         bottom: 15px;
         left: 20px;
         flex-flow: row nowrap;
-        align-items: center;
-        color: white;
+        align-items: center;       
         //font-family: $font-bold;
-        font-weight: bold;
+       
         //background: linear-gradient(transparent, black);
         //mix-blend-mode: multiply;
     }
@@ -56,17 +56,24 @@
 
 .stat {
     display: $display;
-    color: $icon_grey;
+    color: $icon_grey;   
+    //border: 1px solid red;
 
     &__icon {
-        @include width(12px);
+        @include width(10px);
         display: $display;
         margin-right: 5px;
     }
 
     &__txt {
         display: $display;
-        font-size: 12px;
+        font-size: 11px;
+        font-weight: bold;
+        color: $white; 
         margin-right: 10px;
     }
+}
+
+.pic-heading {
+    margin-bottom: 20px;
 }
